ᱫᱚᱥᱟᱨ ᱞᱮᱠᱟᱱᱟᱜ ᱦᱚᱸ ᱯᱟᱨᱥᱟᱞᱮᱱᱟ

--- a/latn/index.html
+++ b/latn/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transliteration Tool</title>
-    <link rel="stylesheet" href="css/transliterate.css">
+    <link rel="stylesheet" href="css/latn.css">
 </head>
 <body>
     <div class="container">
         <h1>ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ ᱥᱟᱯᱟᱵ</h1>
-        <p>ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱥᱮᱞᱮᱫᱽᱢᱮ ᱟᱨ "ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ" ᱨᱮ ᱞᱤᱱᱢᱮ ᱚᱨᱡᱚ ᱧᱮᱞ ᱞᱟᱹᱜᱤᱫ <a href="../transliterate/latn/">᱾</a></p>
+        <p>ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱥᱮᱞᱮᱫᱽᱢᱮ ᱟᱨ "ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ" ᱨᱮ ᱞᱤᱱᱢᱮ ᱚᱨᱡᱚ ᱧᱮᱞ ᱞᱟᱹᱜᱤᱫ <a href="../transliterate/">᱾</a> </p>
         <textarea id="input" placeholder="ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮ ᱥᱮᱞᱮᱫᱽᱢᱮ..."></textarea>
         <button class="button" onclick="performTransliteration()">ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ</button>
         <div class="button-container">
