--- a/latn/index.html
+++ b/latn/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ ᱥᱟᱯᱟᱵ</h1>
-        <p>ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱥᱮᱞᱮᱫᱽᱢᱮ ᱟᱨ "ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ" ᱨᱮ ᱞᱤᱱᱢᱮ ᱚᱨᱡᱚ ᱧᱮᱞ ᱞᱟᱹᱜᱤᱫ <a href="../">᱾</a> [ ᱵᱟᱝ ] </p>
+        <p>ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱥᱮᱞᱮᱫᱽᱢᱮ ᱟᱨ "ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ" ᱨᱮ ᱞᱤᱱᱢᱮ ᱚᱨᱡᱚ ᱧᱮᱞ ᱞᱟᱹᱜᱤᱫ <a href="../">᱾</a> </p>
         <textarea id="input" placeholder="ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮ ᱥᱮᱞᱮᱫᱽᱢᱮ..."></textarea>
         <button class="button" onclick="performTransliteration()">ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ</button>
         <div class="button-container">
