--- a/latn/index.html
+++ b/latn/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="../../kbaske.github.io/assets/icons/logo/transliterate.ico">
+    <link rel="icon" type="image/x-icon" href="./../kbaske.github.io/assets/icons/logo/transliterate.ico">
     <title>Transliteration Tool</title>
     <link rel="stylesheet" href="css/latn.css">
 </head>
