--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transliteration Tool</title>
-    <link rel="icon" type="image/x-icon" href="./kbaske.github.io/assets/icons/logo/transliterate.ico">
+    <link rel="icon" type="image/x-icon" href="../assets/icons/logo/transliterate.ico">
     <link rel="stylesheet" href="css/transliterate.css">
 </head>
 <body>
