ᱞᱤᱸᱠᱠᱚ ᱡᱚᱲᱟᱣ ᱟᱹᱨᱩᱭᱮᱱᱟ

--- a/devn/index.html
+++ b/devn/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transliteration Tool</title>
-    <link rel="stylesheet" href="css/devn.css">
+    <link rel="icon" type="image/x-icon" href="../../assets/icons/logo/transliterate.ico">
+    <link rel="stylesheet" href="../../template/css/transliterate/devn.css">
 </head>
 <body>
     <div class="container">
@@ -19,6 +20,6 @@
         <h2>ᱚᱨᱡᱚ :</h2>
         <div id="output">ᱟᱢᱟᱜ ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞᱚᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮᱭ ᱩᱫᱩᱜᱟ...</div>
     </div>
-    <script src="js/devn.js"></script>
+    <script src="../../template/js/transliterate/devn.js"></script>
 </body>
 </html>
