--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transliteration Tool</title>
     <link rel="icon" type="image/x-icon" href="../assets/icons/logo/transliterate.ico">
-    <link rel="stylesheet" href="css/transliterate.css">
+    <link rel="stylesheet" href="../template/css/transliterate/transliterate.css">
 </head>
 <body>
     <div class="container">
@@ -20,6 +20,6 @@
         <h2>ᱚᱨᱡᱚ :</h2>
         <div id="output">ᱟᱢᱟᱜ ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞᱚᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮᱭ ᱩᱫᱩᱜᱟ...</div>
     </div>
-    <script src="js/latn.js"></script>
+    <script src="../template/js/transliterate/transliterate.js"></script>
 </body>
 </html>
