--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ ᱥᱟᱯᱟᱵ</h1>
-        <p>ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱥᱮᱞᱮᱫᱽᱢᱮ ᱟᱨ "ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ" ᱨᱮ ᱞᱤᱱᱢᱮ ᱚᱨᱡᱚ ᱧᱮᱞ ᱞᱟᱹᱜᱤᱫ <a href="../transliterate/latn/">᱾</a></p>
+        <p>ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱥᱮᱞᱮᱫᱽᱢᱮ ᱟᱨ "ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ" ᱨᱮ ᱞᱤᱱᱢᱮ ᱚᱨᱡᱚ ᱧᱮᱞ ᱞᱟ<a href="../transliterate/latin/">ᱹ</a>ᱜᱤᱫ <a href="../transliterate/latn/">᱾</a></p>
         <textarea id="input" placeholder="ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮ ᱥᱮᱞᱮᱫᱽᱢᱮ..."></textarea>
         <button class="button" onclick="performTransliteration()">ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ</button>
         <div class="button-container">
