--- a/latn/index.html
+++ b/latn/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ ᱥᱟᱯᱟᱵ</h1>
         <p>ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱥᱮᱞᱮᱫᱽᱢᱮ ᱟᱨ "ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ" ᱨᱮ ᱞᱤᱱᱢᱮ ᱚᱨᱡᱚ ᱧᱮᱞ ᱞᱟᱹᱜᱤᱫ<a href="../">᱾</a> </p>
-        <textarea id="input" placeholder="ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮ ᱥᱮᱞᱮᱫᱽᱢᱮ..."></textarea>
+        <textarea id="input" placeholder="ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮ ᱥᱮᱞᱮᱫᱽᱢᱮ... \n ᱯᱤᱹ ᱳᱹ ᱵᱚᱰᱤᱝᱟᱜ (P.O. Bodding) ᱚᱞ ᱦᱚᱨᱟ ᱞᱮᱠᱟᱛᱮ ᱚᱞᱟᱠᱟᱱᱟᱜᱠᱚ ᱥᱟᱱᱛᱟᱲᱤ ᱪᱤᱠᱤᱛᱮᱭ ᱚᱞ ᱟᱹᱨᱩᱭᱟ ᱾"></textarea>
         <button class="button" onclick="performTransliteration()">ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ</button>
         <div class="button-container">
             <button class="button reset-button" onclick="resetInput()">ᱥᱟᱸᱵᱟᱣᱟᱜ ᱯᱷᱩᱨᱪᱟᱹ</button>
