--- a/latin/index.html
+++ b/latin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../../assets/icons/logo/transliterate.ico">
-    <title>Transliteration Tool</title>
+    <title>Latin (Roman) Transliteration Tool</title>
     <link rel="stylesheet" href="../../assets/template/css/transliterate/transliterate.css">
 </head>
 <body>
