--- a/devn/index.html
+++ b/devn/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transliteration Tool</title>
+    <title>Devanagri Transliteration Tool</title>
     <link rel="icon" type="image/x-icon" href="../../assets/icons/logo/transliterate.ico">
     <link rel="stylesheet" href="../../assets/template/css/transliterate/transliterate.css">
 </head>
