--- a/devn/index.html
+++ b/devn/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devanagri Transliteration Tool</title>
+    <meta name="description" content="Transliteration Tool for converting text between Devanagri script to Santali (Ol Chiki) script. Easily transliterate or convert and copy and paste your text.">
     <link rel="icon" type="image/x-icon" href="../../assets/icons/logo/transliterate.ico">
     <link rel="stylesheet" href="../../assets/template/css/transliterate/transliterate.css">
 </head>
