--- a/latin/index.html
+++ b/latin/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../../assets/icons/logo/transliterate.ico">
     <title>Latin (Roman) Transliteration Tool</title>
+    <meta name="description" content="Transliteration Tool for converting text between Roman/Latin script to Santali (Ol Chiki) script. Easily transliterate or convert and copy and paste your text.">
     <link rel="stylesheet" href="../../assets/template/css/transliterate/transliterate.css">
 </head>
 <body>
