--- a/latin/index.html
+++ b/latin/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="sat">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="../../assets/icons/logo/transliterate.ico">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="../../assets/icons/logo/transliterate.ico">
     <title>Latin (Roman) Transliteration Tool</title>
     <meta name="description" content="Transliteration Tool for converting text between Roman/Latin script to Santali (Ol Chiki) script. Easily transliterate or convert and copy and paste your text.">
-    <link rel="stylesheet" href="../../assets/layout/css/layout.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Ol+Chiki:wght@400..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/template/css/transliterate/transliterate.css">
+  <link rel="stylesheet" href="../../assets/layout/css/layout.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Ol+Chiki:wght@400..700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header>
+  <header>
     <div class="mobile-header">
         <button class="menu-toggle" id="menu-toggle" onclick="toggleMenu()">☰</button>
         <span class="site-name">ᱣᱤᱠᱤ ᱟᱹᱲᱟᱹ ᱢᱩᱨᱟᱹᱭ</span>
@@ -77,7 +78,8 @@
 <div class="overlay" id="overlay"></div>
 
   <main>
-    <div class="container">
+    <!-- [ Your content goes here... ] -->
+        <div class="container">
         <h1>ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ ᱥᱟᱯᱟᱵ</h1>
         <p>ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱥᱮᱞᱮᱫᱽᱢᱮ ᱟᱨ "ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ" ᱨᱮ ᱞᱤᱱᱢᱮ ᱚᱨᱡᱚ ᱧᱮᱞ ᱞᱟᱹᱜᱤᱫ<a href="../"> ᱾</a> </p>
         <textarea id="input" placeholder="ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮ ᱥᱮᱞᱮᱫᱽᱢᱮ...  ᱯᱤᱹ ᱳᱹ ᱵᱚᱰᱤᱝᱟᱜ (P.O. Bodding) ᱚᱞ ᱦᱚᱨᱟ ᱞᱮᱠᱟᱛᱮ ᱚᱞᱟᱠᱟᱱᱟᱜᱠᱚ ᱥᱟᱱᱛᱟᱲᱤ ᱪᱤᱠᱤᱛᱮᱭ ᱚᱞ ᱟᱹᱨᱩᱭᱟ ᱾"></textarea>
@@ -89,7 +91,7 @@
         <h2>ᱚᱨᱡᱚ :</h2>
         <div id="output">ᱟᱢᱟᱜ ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞᱚᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮᱭ ᱩᱫᱩᱜᱟ...</div>
     </div>
-    </main>
+  </main>
 
   <footer>
     <p> <span class="copyrt">©</span> 2024 <a href="https://santals.in/" target="_blank" rel="noopener">Santali Tools</a>. All Rights Reserved.</p>
@@ -97,6 +99,7 @@
 
   <!-- [ JavaScript ] -->
   <script src="../../assets/layout/js/layout.js"></script>
-    <script src="../../assets/template/js/transliterate/latin.js"></script>
+  <script src="../../assets/template/js/transliterate/latin.js"></script>
+
 </body>
 </html>
