add missing stylesheet link for transliteration styles

--- a/latin/index.html
+++ b/latin/index.html
@@ -8,6 +8,7 @@
     <title>Latin (Roman) Transliteration Tool</title>
     <meta name="description" content="Transliteration Tool for converting text between Roman/Latin script to Santali (Ol Chiki) script. Easily transliterate or convert and copy and paste your text.">
   <link rel="stylesheet" href="../../assets/layout/css/layout.css">
+  <link rel="stylesheet" href="../../assets/template/css/transliterate/transliterate.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Ol+Chiki:wght@400..700&display=swap" rel="stylesheet">
