wrap main content in <main> tags for improved semantic structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="../assets/template/css/transliterate/transliterate.css">
 </head>
 <body>
-    <div class="container">
+    <main>
+        <div class="container">
         <h1>ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ ᱥᱟᱯᱟᱵ</h1>
         <p>ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱥᱮᱞᱮᱫᱽᱢᱮ ᱟᱨ "ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ" ᱨᱮ ᱞᱤᱱᱢᱮ ᱚᱨᱡᱚ ᱧᱮᱞ ᱞᱟᱹᱜᱤᱫ <a href="../transliterate/latn/">᱾</a></p>
         <textarea id="input" placeholder="ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮ ᱥᱮᱞᱮᱫᱽᱢᱮ...  ᱯᱤᱹ ᱳᱹ ᱵᱚᱰᱤᱝᱟᱜ (P.O. Bodding) ᱟᱨ ᱫᱮᱣᱱᱟᱜᱽᱨᱤ ᱚᱞ ᱦᱚᱨᱟ ᱞᱮᱠᱟᱛᱮ ᱚᱞᱟᱠᱟᱱᱟᱜᱠᱚ ᱥᱟᱱᱛᱟᱲᱤ ᱪᱤᱠᱤᱛᱮᱭ ᱚᱞ ᱟᱹᱨᱩᱭᱟ ᱾"></textarea>
@@ -21,6 +22,7 @@
         <h2>ᱚᱨᱡᱚ :</h2>
         <div id="output">ᱟᱢᱟᱜ ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞᱚᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮᱭ ᱩᱫᱩᱜᱟ...</div>
     </div>
+    </main>
     <script src="../assets/template/js/transliterate/transliterate.js"></script>
 </body>
 </html>
