refactor generate button class for improved styling

--- a/latin/index.html
+++ b/latin/index.html
@@ -84,7 +84,7 @@
         <h1>ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ ᱥᱟᱯᱟᱵ</h1>
         <p>ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱥᱮᱞᱮᱫᱽᱢᱮ ᱟᱨ "ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ" ᱨᱮ ᱞᱤᱱᱢᱮ ᱚᱨᱡᱚ ᱧᱮᱞ ᱞᱟᱹᱜᱤᱫ<a href="../"> ᱾</a> </p>
         <textarea id="input" placeholder="ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮ ᱥᱮᱞᱮᱫᱽᱢᱮ...  ᱯᱤᱹ ᱳᱹ ᱵᱚᱰᱤᱝᱟᱜ (P.O. Bodding) ᱚᱞ ᱦᱚᱨᱟ ᱞᱮᱠᱟᱛᱮ ᱚᱞᱟᱠᱟᱱᱟᱜᱠᱚ ᱥᱟᱱᱛᱟᱲᱤ ᱪᱤᱠᱤᱛᱮᱭ ᱚᱞ ᱟᱹᱨᱩᱭᱟ ᱾"></textarea>
-        <button class="button generate-button" onclick="performTransliteration()">ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ</button>
+        <button class="button" onclick="performTransliteration()">ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ</button>
         <div class="button-container">
             <button class="button reset-button" onclick="resetInput()">ᱥᱟᱸᱵᱟᱣᱟᱜ ᱯᱷᱩᱨᱪᱟᱹ</button>
             <button class="button copy-button" onclick="copyToClipboard()">ᱚᱨᱡᱚ ᱦᱟᱞᱟᱝ</button>
