--- a/index.html
+++ b/index.html
@@ -1,18 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sat">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="../../assets/icons/logo/transliterate.ico">
     <title>Transliteration Tool</title>
     <meta name="description" content="Transliteration Tool for converting text between Roman/Latin or Devanagri script to Santali (Ol Chiki) script. Easily transliterate or convert and copy and paste your text.">
-    <link rel="icon" type="image/x-icon" href="../assets/icons/logo/transliterate.ico">
-    <link rel="stylesheet" href="../assets/template/css/transliterate/transliterate.css">
+    <link rel="stylesheet" href="../../assets/layout/css/layout.css">
+    <link rel="stylesheet" href="../../assets/template/css/transliterate/transliterate.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Ol+Chiki:wght@400..700&display=swap" rel="stylesheet">
 </head>
+
 <body>
+    <header>
+    <div class="mobile-header">
+        <button class="menu-toggle" id="menu-toggle" onclick="toggleMenu()">☰</button>
+        <span class="site-name">ᱵᱚᱱᱚᱫᱚᱞ ᱥᱟᱯᱟᱵ</span>
+        <span class="langsel">
+            <select id="languageSelectorM" title="Language" onchange="changeLanguage(event)">
+            <option value="sat">ᱥᱟᱱᱛᱟᱲᱤ</option>
+            <option value="en">English</option>
+            </select>
+        </span>
+    </div>
+    <div class="desktop-header">
+        <span class="site-name">ᱵᱚᱱᱚᱫᱚᱞ ᱥᱟᱯᱟᱵ</span>
+        <nav>
+            <ul class="desktop-menu">
+                <li>
+                    <select id="languageSelector" title="Language" onchange="changeLanguage(event)">
+                    <option value="sat">ᱥᱟᱱᱛᱟᱲᱤ</option>
+                    <option value="en">English</option>
+                    </select>
+                </li>
+                <li><a href="/">ᱚᱲᱟᱜ</a></li>
+                <li><a href="../about/">ᱟᱞᱮ ᱵᱟᱵᱚᱛ</a></li>
+                <li class="dropdown">
+                    <a href="#tools">ᱥᱟᱯᱟᱵ ᱠᱚ</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/wt/search/">Check Word</a></li>
+                        <li><a href="/wt/dics/">Dictionary/Translation Search</a></li>
+                        <li><a href="/wt/itemp/">Interactive Template</a></li>
+                        <li><a href="/wt/temp/">Wiktionary Template</a></li>
+                        <li><a href="/wt/stemp/">SN Template</a></li>
+                        <li><a href="/wt/mymemory/">Mymemory</a></li>
+                        <li><a href="/wt/sptts/">Santali TTS</a></li>
+                    </ul>
+                </li>
+                <li><a href="https://santals.in/p/contact.html" target="_blank" rel="noopener">ᱥᱟᱹᱜᱟᱹᱭ ᱞᱮᱯᱮ</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
+<div id="mobile-menu" class="mobile-menu">
+    <button id="close-menu" class="close-button">X</button>
+    <!-- Add your menu items here -->
+    <a href="/">ᱚᱲᱟᱜ</a>
+    <a href="../about/">ᱟᱞᱮ ᱵᱟᱵᱚᱛ</a>
+    <div class="dropdown">
+    <a href="#tools" class="dropdown-toggle" onclick="toggleDropdown(event)">ᱥᱟᱯᱟᱵ ᱠᱚ <span class="drop-u"><img width="20" height="20" src="https://img.icons8.com/ios/1600/FFFFFF/circled-chevron-down.png" alt="circled-chevron-down"/></span> </a>
+    <ul class="dropdown-content">
+        <li><a href="/wt/search/">Check Word</a></li>
+        <li><a href="/wt/dics/">Dictionary/Translation Search</a></li>
+        <li><a href="/wt/itemp/">Interactive Template</a></li>
+        <li><a href="/wt/temp/">Wiktionary Template</a></li>
+        <li><a href="/wt/stemp/">SN Template</a></li>
+        <li><a href="/wt/mymemory/">Mymemory</a></li>
+        <li><a href="/wt/sptts/">Santali TTS</a></li>
+    </ul>
+</div>
+    <a href="https://literature.santals.in/p/contact.html" target="_blank" rel="noopener">ᱥᱟᱹᱜᱟᱹᱭ ᱞᱮᱯᱮ</a>
+</div>
+
+<div class="overlay" id="overlay"></div>
+
     <main>
+    <!-- [ Your content goes here... ] -->
         <div class="container">
         <h1>ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ ᱥᱟᱯᱟᱵ</h1>
-        <p>ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱥᱮᱞᱮᱫᱽᱢᱮ ᱟᱨ "ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ" ᱨᱮ ᱞᱤᱱᱢᱮ ᱚᱨᱡᱚ ᱧᱮᱞ ᱞᱟᱹᱜᱤᱫ <a href="../transliterate/latn/">᱾</a></p>
+        <p>ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱥᱮᱞᱮᱫᱽᱢᱮ ᱟᱨ "ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ" ᱨᱮ ᱞᱤᱱᱢᱮ ᱚᱨᱡᱚ ᱧᱮᱞ ᱞᱟᱹᱜᱤᱫ<a href="../"> ᱾</a> </p>
         <textarea id="input" placeholder="ᱟᱢᱟᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮ ᱥᱮᱞᱮᱫᱽᱢᱮ...  ᱯᱤᱹ ᱳᱹ ᱵᱚᱰᱤᱝᱟᱜ (P.O. Bodding) ᱟᱨ ᱫᱮᱣᱱᱟᱜᱽᱨᱤ ᱚᱞ ᱦᱚᱨᱟ ᱞᱮᱠᱟᱛᱮ ᱚᱞᱟᱠᱟᱱᱟᱜᱠᱚ ᱥᱟᱱᱛᱟᱲᱤ ᱪᱤᱠᱤᱛᱮᱭ ᱚᱞ ᱟᱹᱨᱩᱭᱟ ᱾"></textarea>
         <button class="button" onclick="performTransliteration()">ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞ</button>
         <div class="button-container">
@@ -23,6 +93,14 @@
         <div id="output">ᱟᱢᱟᱜ ᱪᱤᱠᱤ ᱵᱚᱱᱚᱫᱚᱞᱚᱜ ᱚᱱᱚᱞ ᱠᱚ ᱱᱚᱸᱰᱮᱭ ᱩᱫᱩᱜᱟ...</div>
     </div>
     </main>
+
+    <footer>
+    <p> <span class="copyrt">©</span> 2024-<span id="year"></span> <a href="https://santals.in/" target="_blank" rel="noopener">Santali Tools</a>. All Rights Reserved.</p>
+    </footer>
+
+    <!-- [ JavaScript ] -->
+    <script src="../assets/layout/js/layout.js"></script>
     <script src="../assets/template/js/transliterate/transliterate.js"></script>
+
 </body>
 </html>
